# Medisys-AI

./: .env.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
.claude/: launch.json
alembic/: env.py
alembic/versions/: 691a6cfe4ea2_v2_1_sante_profil_vaccinations_medecin_.py  6c4251957819_v2_1_password_reset_tokens.py  76e541375686_v2_1_messaging_documents.py  c84cc9b53ad5_partial_unique_index_active_rdv_per_.py  d3539f0b9505_initial_schema.py  fc5e0416fa80_doctolib_medecin_enriched_fields_motifs_.py
app/: main.py
app/core/: config.py  dependencies.py  security.py
app/db/: base.py  session.py
app/models/: audit.py  disponibilite.py  document.py  dossier.py  medecin.py  messaging.py  motif.py  notification.py  password_reset.py  patient.py  refresh_token.py  rendezvous.py  sante.py  user.py
app/schemas/: auth.py  common.py  disponibilite.py  document.py  dossier.py  medecin.py  messaging.py  motif.py  notification.py  patient.py  rendezvous.py  sante.py
app/services/: audit_service.py  auth_service.py  disponibilite_service.py  dossier_service.py  messaging_service.py  notification_service.py  reservation_service.py  sante_service.py
app/tests/: conftest.py  test_auth.py  test_autorisations.py  test_documents.py  test_dossier.py  (+4 more)
frontend/: .env.example  .eslintrc.cjs  .gitignore  Dockerfile  README.md  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.ts  vite.config.ts
scripts/: seed.py
web/: .env.local.example  .gitignore  README.md  package-lock.json  package.json  tailwind.config.ts
(+120 files in other folders)
